# agents-posts

./: .env.example  .gitignore  Dockerfile  LLM_PROVIDERS.md  Makefile  README.md  fly.toml  pyproject.toml  setup.py
.github/workflows/: daily-run.yml
skills/: claude.ia.md
src/: config.py  main.py  model_factory.py  models.py
src/agents/: editor.py  publisher.py  researcher.py
src/sources/: __init__.py  google.py  newsapi.py  rss.py  tavily.py
src/substack/: client.py
